yoshimi 1.5.4 M

2017-11-20 Will
* Small improvement to history lists.
  Ready to include instruments.

2017-11-19 Will
* Simplified history lists.
  Last used is now always top of its list.
* All main file loads/saves offer last used.

2017-11-18 Will
* Note on/off swap now in MusicIO.
* Resolved channel switch Gui issues.
* Consolidated SetSystemValues as NRPN only.
  Still not completely thread safe.
* Updated docs.
* More refinements to CLI.
* Tidied up some MIDI-learn messages.

2017-11-17 Will
* Added error reports to several I/O ring buffers.
* Revised channel switcher.
  Still some GUI anomalies to sort out :(

2017-11-16 Will
* BugFix: New Vectors weren't being saved.

2017-11-15 Will
* Finalised jack part destination changes.
  Vector control now sets these correctly!

2017-11-14 Will
* Refactored indirectTransfers.
  Was 'transfertext' but used for much else.
* Improved jack part destination changes.

2017-11-13 Will
* NRPN direct part control now threadsafe.
  Only NRPN system values to do :)

2017-11-12 Will
* Corrected Vector GUI anomalies.
* Improved CLI part channel change.
* Started work on NRPN direct part access.

2017-11-11 Will
* BugFix: GUI Insert effects failed to update.
* NRPN effect changes now threadsafe.
  Some GUI anomalies to sort out.
* Code cleanups.
* Rationalised system value ranges.
* Updated docs.

2017-11-10 Will
* Code cleanups around incomming MIDI.

2017-11-9 Will
* GUI copy/paste now threadsafe
  but needs much improvement.
* Removed sse from 'BASIC' compiler build options.
* In SynthEngine the build defaults to NOLOCK.
  This means *all* mutex locks are disabled.

2017-11-8-Will
* CLI effects code cleanups.

2017-11-7 Will
* All remaining CLI writes thread safe :)
  but some effect controls don't update GUI
  and code tidying needed.
* Doc updates.

2017-11-6 Will
* Vector GUI writes now thread safe :)

2017-11-5 Will
* Significant re-factor of vector control.
  Stable, but some details to be improved.